[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MATCCSGWorksheet"
version = "0.0.1"
description = "A docassemble extension for the Massachusetts Child Support Guidelines Worksheet (CJD 304)."
readme = "README.md"
authors = [
    { name = "LIT Lab", email = "alara.akisik@su.suffolk.edu" },
]
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
